--- a/frontend_app/src/assets/main.css
+++ b/frontend_app/src/assets/main.css
@@ -4,9 +4,16 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
+}
+
+body * { font-family: "Inter", sans-serif; }
+
+button:focus, textarea:focus, input:focus {
+  outline: 2px solid rgb(255, 152, 16);
+  outline-offset: 0px;
+  border-color: transparent !important;
 }
