--- a/frontend_app/src/assets/main.css
+++ b/frontend_app/src/assets/main.css
@@ -1,5 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
+:root {
+  --primary-500: rgb(255, 152, 16);
+  --primary-600: rgb(238, 145, 23);
+
+  --secondary-200: rgb(153, 153, 247);;
+  --secondary-500: rgb(104, 104, 255);
+  --secondary-600: rgb(92, 92, 238);
+
+  --text-500: black;
+
+  --base-50: white;
+  --base-200: rgb(238, 238, 238);
+  --base-300: rgb(211, 211, 211);
+  --base-400: rgb(243, 243, 243);
+  --base-500: rgb(235, 235, 235);
+  --base-800: rgb(143, 143, 143);
+  --base-900: rgb(131, 131, 131);
+
+  --backdrop: rgba(0, 0, 0, 0.05);
+}
+
+:root .dark-theme {
+  --text-500: white;
+
+  --base-50: rgb(12, 12, 12);
+  --base-200: rgb(24, 24, 24);
+  --base-300: rgb(36, 36, 36);
+  --base-400: rgb(48, 48, 48);
+  --base-500: rgb(64, 64, 64);
+  --base-800: rgb(96, 96, 96);
+  --base-900: rgb(112, 112, 112);
+
+  --backdrop: rgba(255, 255, 255, 0.05);
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -8,12 +43,18 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
+  background-color: var(--base-50);
+  transition: color 0.1s ease,
+    background-color 0.1s ease;
 }
 
-body * { font-family: "Inter", sans-serif; }
+body * {
+  font-family: "Inter", sans-serif;
+  color: var(--text-500);
+}
 
 button:focus, textarea:focus, input:focus {
-  outline: 2px solid rgb(255, 152, 16);
+  outline: 2px solid var(--primary-500);
   outline-offset: 0px;
   border-color: transparent !important;
 }
