--- a/frontend_app/src/assets/main.css
+++ b/frontend_app/src/assets/main.css
@@ -74,7 +74,7 @@ button:focus, textarea:focus, input:focus {
 
 /* Inputs */
 
-input[type="text"], input[type="password"] { height: 28px; }
+input[type="text"], input[type="password"], input[type="email"] { height: 28px; }
 input, textarea {
   border: 1px solid var(--base-200);
   border-radius: 4px;
