feat: add input validation

--- a/frontend_app/src/assets/main.css
+++ b/frontend_app/src/assets/main.css
@@ -8,6 +8,8 @@
   --secondary-500: rgb(104, 104, 255);
   --secondary-600: rgb(92, 92, 238);
 
+  --error-500: rgb(255, 99, 99);
+
   --text-500: black;
 
   --base-50: white;
